--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "request-promise-core": "1.1.1",
+    "request-promise-core": "silver-curve/promise-core",
     "bluebird": "^3.4.1",
     "stealthy-require": "^1.0.0"
   },
